Makefile tweaks, added Eigen3 to the dnf install instructions for example 15, minor include order changes for example 13 and a broken helper ref for example 6

--- a/examples/0.0_Empty/Makefile
+++ b/examples/0.0_Empty/Makefile
@@ -26,4 +26,4 @@ CC = g++-12 -std=c++17
 endif
 
 all: main.cpp
-			$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main
+	@$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main
