--- a/examples/12.0_Diffusion/Makefile
+++ b/examples/12.0_Diffusion/Makefile
@@ -25,11 +25,11 @@ LF += -I/opt/homebrew/include -L/opt/homebrew/lib
 CC = g++-12 -std=c++17
 endif
 all: main.cpp
-			$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main
+	@$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main
 
 DAT = shader			#data directory to embed
 .PHONY: embedded
 embedded: CEF = $(shell c-embed $(DAT)) c-embed.o -include /usr/local/include/c-embed.h -DCEMBED_TRANSLATE
 embedded:
-	$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main ${CEF}
+	@$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main ${CEF}
 	rm c-embed.o
