--- a/examples/16.0_Gravity/Makefile
+++ b/examples/16.0_Gravity/Makefile
@@ -26,7 +26,7 @@ CC = g++-12 -std=c++17
 endif
 
 all: main.cpp
-			$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYOS) $(TINYLINK) -o main
+	@$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYOS) $(TINYLINK) -o main
 
 DAT = shader			#data directory to embed
 .PHONY: embedded
