--- a/examples/1.0_Image/Makefile
+++ b/examples/1.0_Image/Makefile
@@ -26,7 +26,7 @@ CC = g++-12 -std=c++17
 endif
 
 all: main.cpp
-			$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main
+	@$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -o main
 
 # Build Embedded Form
 
