--- a/examples/19.3_LBM3D/Makefile
+++ b/examples/19.3_LBM3D/Makefile
@@ -20,7 +20,7 @@ TINYOS = -framework OpenGL
 endif
 
 all: main.cpp
-			$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYOS) $(TINYLINK) -o main
+	@$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYOS) $(TINYLINK) -o main
 
 DAT = shader			#data directory to embed
 .PHONY: embedded
