--- a/examples/20.0_Cloth/Makefile
+++ b/examples/20.0_Cloth/Makefile
@@ -20,4 +20,4 @@ TINYOS = -framework OpenGL
 endif
 
 all: main.cpp
-			$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYOS) $(TINYLINK) -o main
+	@$(CC) main.cpp $(CF) $(LF) -lTinyEngine $(TINYOS) $(TINYLINK) -o main
