--- a/examples/compute_n_ball_flow/Makefile
+++ b/examples/compute_n_ball_flow/Makefile
@@ -1,13 +1,13 @@
 # TinyEngine Makefile
 # Compiler Configuration
 
-CC = g++ -std=c++20
+CC = g++ -std=c++17
 CF = -Wfatal-errors -O
 LF = -I$(HOME)/.local/include -L$(HOME)/.local/lib
 
 # General Linking
 
-TINYLINK = -lpthread -lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf -lGLEW 
+TINYLINK = -lpthread -lSDL2 -lpng -lSDL2_mixer -lSDL2_ttf -lGLEW 
 
 # OS Specific Linking
 
