cleaned up camera helper (structure finalized, event callbacks will be adjusted) and the timer helper (now called benchmark). Further improvements will be made when engine-reflection / debug info is properly integrated

--- a/source/Makefile
+++ b/source/Makefile
@@ -73,7 +73,7 @@ install:
 # TinyEngine Helpers #
 ######################
 
-HELPERS = camera image object timer
+HELPERS = camera image object benchmark
 
 .PHONY: helpers
 helpers:
