separated out the GUI as a utility and removed it from view. This will later allow for derived classes which implement specific GUI information, like debug information

--- a/source/Makefile
+++ b/source/Makefile
@@ -71,7 +71,7 @@ install:
 # TinyEngine Helpers #
 ######################
 
-HELPERS = camera image object benchmark
+HELPERS = camera image object benchmark gui
 
 .PHONY: helpers
 helpers:
