added rudimentary debug info support which are started up with the callback structure of event

--- a/source/Makefile
+++ b/source/Makefile
@@ -71,7 +71,7 @@ install:
 # TinyEngine Helpers #
 ######################
 
-HELPERS = camera image object benchmark gui
+HELPERS = camera image object benchmark gui debug
 
 .PHONY: helpers
 helpers:
