changed the build slightly so that the global variables are no longer static, i.e. compile unit separated, but instead marked as extern for linking. subsequently, separated the python binding build cleanly into separate compilation units and fixed the two python examples

--- a/python/Makefile
+++ b/python/Makefile
@@ -2,12 +2,12 @@
 # Compiler Configuration
 
 CC = g++ -std=c++17
-CF = -Wfatal-errors -O
+CF = -Wfatal-errors -O3
 LF = -I$(HOME)/.local/include -L$(HOME)/.local/lib
 
 # General Linking
 
-TINYLINK = -lSDL2 -lpng  -lGLEW 
+TINYLINK = -lSDL2 -lpng -lGLEW -lTinyEngine
 
 # OS Specific Linking
 
@@ -27,6 +27,10 @@ endif
 
 all:
 	@$(eval MODULE:= tinyengine$(shell python3-config --extension-suffix))
-	@$(CC) source/TinyEngine.cpp $(CF) $(LF) -lTinyEngine $(TINYLINK) -shared -fPIC $(shell python3 -m pybind11 --includes) -o ${MODULE}
+	@$(CC) $(CF) $(LF) \
+		source/TinyEngine.cpp \
+		source/core.cpp \
+		source/util.cpp \
+		 $(TINYLINK) -shared -fPIC $(shell python3 -m pybind11 --includes) -o ${MODULE}
 	@echo "Installing TinyEngine Python Module..."
 	@mv ${MODULE} $(HOME)/.local/lib/python3.12/site-packages/${MODULE}
